--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="card-footer">
-        <a href="/todos/view/all" class="btn btn-sm btn-primary">View All Todos</a>
+        <a href="/todos/all" class="btn btn-sm btn-primary">View All Todos</a>
         <a href="/todos/create" class="btn btn-sm btn-outline-primary">Add New</a>
       </div>
     </div>
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="card-footer">
-        <a href="/appointments/view/calendar" class="btn btn-sm btn-primary">View Calendar</a>
+        <a href="/appointments/calendar" class="btn btn-sm btn-primary">View Calendar</a>
         <a href="/appointments/create" class="btn btn-sm btn-outline-primary">Add New</a>
       </div>
     </div>
