--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -193,10 +193,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item user-menu d-none">
-            <a class="nav-link" href="/todos/view/all"><i class="fas fa-tasks"></i> Todos</a>
+            <a class="nav-link" href="/todos/all"><i class="fas fa-tasks"></i> Todos</a>
           </li>
           <li class="nav-item user-menu d-none">
-            <a class="nav-link" href="/appointments/view/calendar"><i class="far fa-calendar-alt"></i> Calendar</a>
+            <a class="nav-link" href="/appointments/calendar"><i class="far fa-calendar-alt"></i> Calendar</a>
           </li>
         </ul>
         <ul class="navbar-nav">
@@ -239,27 +239,27 @@
       </h6>
       <ul class="nav flex-column">
         <li class="nav-item">
-          <a class="nav-link" href="/todos/view/all?status=pending">
+          <a class="nav-link" href="/todos/all?status=pending">
             <i class="far fa-clock"></i> Pending Todos
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/todos/view/all?status=completed">
+          <a class="nav-link" href="/todos/all?status=completed">
             <i class="fas fa-check"></i> Completed Todos
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/todos/view/all?priority=high">
+          <a class="nav-link" href="/todos/all?priority=high">
             <i class="fas fa-exclamation-circle"></i> High Priority
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/appointments/view/calendar?view=day">
+          <a class="nav-link" href="/appointments/calendar?view=day">
             <i class="fas fa-calendar-day"></i> Today's Schedule
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/appointments/view/calendar?view=week">
+          <a class="nav-link" href="/appointments/calendar?view=week">
             <i class="fas fa-calendar-week"></i> This Week
           </a>
         </li>
