--- a/src/views/todos/create.ejs
+++ b/src/views/todos/create.ejs
@@ -3,7 +3,7 @@
 <div class="container-fluid">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="h3">Create New Todo</h1>
-    <a href="/todos/view/all" class="btn btn-secondary">
+    <a href="/todos/all" class="btn btn-secondary">
       <i class="fas fa-arrow-left"></i> Back to List
     </a>
   </div>
@@ -63,7 +63,7 @@
           </div>
           
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button type="button" class="btn btn-secondary me-md-2" onclick="window.location.href='/todos/view/all'">Cancel</button>
+            <button type="button" class="btn btn-secondary me-md-2" onclick="window.location.href='/todos/all'">Cancel</button>
             <button type="submit" class="btn btn-primary">Create Todo</button>
           </div>
         </form>
@@ -113,7 +113,7 @@
         
         if (response.data.success) {
           // Redirect to todos list
-          window.location.href = '/todos/view/all';
+          window.location.href = '/todos/all';
         } else {
           // Show error
           alert(response.data.message || 'Something went wrong. Please try again.');
