--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,6 +14,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Axios -->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   
   <!-- Custom CSS with theme color -->
   <% const primaryColor = typeof themeColor !== 'undefined' ? themeColor : '#72d1a8'; %>
